feat!: Stateless by default + SessionIdGenerator + RuntimeConfig (#51)
## New Features

- Sessions are now off by default, with a clearer option to enable full
session mode when resumability or replay is needed.
- Added support for custom session ID generation, including deriving IDs
from request data.
- Introduced separate runtime settings for shutdown grace periods.
- Updated examples, docs, and tests to match the new session and runtime
configuration behavior.

## Bug Fixes

- Improved session handling during server startup and shutdown.
- Update detekt config